常规维护 不要更新

--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/list.html
@@ -15,13 +15,11 @@
 					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">评分组配置</a> <a><cite>列表</cite></a>
 					</span>
 				</div>
-				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 评分组配置
-				</blockquote>
 				<blockquote class="layui-elem-quote layui-quote-nm">
 					<div class="layui-inline">
 						<div class="layui-input-inline">
-							<a th:href="@{/admin/m/ext/scoreGroup/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增评分组</a>
+							<a th:href="@{/admin/m/ext/scoreGroup/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增评分组
+							</a>
 						</div>
 					</div>
 				</blockquote>
