--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/material/image/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/material/image/list.html
@@ -15,9 +15,6 @@
 					<span class="layui-breadcrumb"> <a><cite>素材管理</cite></a> <a href="#">图片管理</a> <a><cite>列表</cite></a>
 					</span>
 				</div>
-				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
-					<i class="layui-icon">&#xe60b;</i> 图片管理
-				</blockquote>
 				<blockquote class="layui-elem-quote layui-quote-nm">
 					<div class="layui-inline">
 						<div class="layui-input-inline">
@@ -31,8 +28,8 @@
 							<tr>
 								<th width="40" class="text-center">#</th>
 								<th class="text-center">图片名称</th>
-								<th class="text-center">图片大小</th>
 								<th class="text-center">图片路径</th>
+								<th class="text-center">图片大小</th>
 								<th width="90" class="text-center">操作</th>
 							</tr>
 						</thead>
@@ -42,9 +39,9 @@
 							</tr>
 							<tr th:each="item,itemStat:${imgList.records}">
 								<td th:text="${imgList.pageSize*(imgList.page-1)+itemStat.index+1}" style="text-align: center;"></td>
-								<td th:text="${item.imgName}" style="text-align: center;"></td>
-								<td th:text="${item.imgLength}" style="text-align: center;"></td>
+								<td th:text="${item.imgName}"></td>
 								<td th:text="${item.imgPath}"></td>
+								<td th:text="${item.imgLength}"></td>
 								<td><a th:href="|@{/admin/m/base/image/show_}${item.id}.gsp|" class="layui-btn layui-btn-primary layui-btn-small"><i class="layui-icon">&#xe615;</i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
 							</tr>
 						</tbody>
@@ -62,7 +59,7 @@
     var result = /*[[${imgList}]]*/;
     $(function(){
         var option = {
-            listUrl : /*[[@{/admin/m/base/image/list.htm?}]]*/,
+            listUrl : /*[[@{/admin/m/base/image/list.gsp?}]]*/,
             totalPages : result.totalPages,
             page : result.page,
             param : {
