--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/material/video/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/material/video/list.html
@@ -79,7 +79,7 @@
     $(function(){
         $("#simpleQueryParam").val(GetQueryString("simpleQueryParam"));
         var option = {
-            listUrl : /*[[@{/admin/m/base/video/list.htm?}]]*/,
+            listUrl : /*[[@{/admin/m/base/video/list.gsp?}]]*/,
             totalPages : result.totalPages,
             page : result.page,
             param : {
