--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/editFile.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/editFile.html
@@ -31,9 +31,9 @@
 						</div>
 					</div>
 					<div class="layui-form-item">
-					   <label class="layui-form-label">模板内容：<span style="color: red">*</span></label>
+						<label class="layui-form-label">模板内容：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<textarea name="content" th:utext="${result.content}" required rows="18"class="layui-textarea"></textarea>
+							<textarea name="content" style="background: #DDDDDD;" th:utext="${result.content}" rows="25" required class="layui-textarea"></textarea>
 						</div>
 					</div>
 					<div class="layui-form-item">
@@ -58,12 +58,12 @@
         fileName : function(value) {
             if (value.length < 1) {
                 return '模版名称不能为空！';
-            } 
+            }
         },
         content : function(value) {
             if (value.length < 1) {
                 return '模版内容不能为空！';
-            } 
+            }
         }
     });
     //监听提交
