--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/add.html
@@ -34,7 +34,7 @@
 					<div class="layui-form-item layui-form-text">
 						<label class="layui-form-label">描述：</label>
 						<div class="layui-input-block">
-							<textarea name="description" class="layui-textarea" placeholder="请输入描述" lay-verify="description"></textarea>
+							<textarea name="description" class="layui-textarea" placeholder="请输入描述" lay-verify="description" maxLength="150"></textarea>
 						</div>
 					</div>
 					<div class="layui-form-item">
