--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/add.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/node/add.html
@@ -56,13 +56,13 @@
 						<div class="layui-inline" style="width: 350px;">
 							<label class="layui-form-label">栏目模板：<span style="color: red">*</span></label>
 							<div class="layui-input-block">
-								<input id="node" name="nodeTemplate" placeholder="请输入栏目模板" type="text" class="layui-input" /> <a onclick="select(1)" class="layui-btn" type="button"><i class="layui-icon">&#xe615;</i> </a>
+								<input id="node" name="nodeTemplate" placeholder="请输入栏目模板" type="text" class="layui-input" maxLength="25"/> <a onclick="select(1)" class="layui-btn" type="button"><i class="layui-icon">&#xe615;</i> </a>
 							</div>
 						</div>
 						<div class="layui-inline" style="width: 350px;">
 							<label class="layui-form-label">文档模板：<span style="color: red">*</span></label>
 							<div class="layui-input-block">
-								<input id="info" name="infoTemplate" placeholder="请输入文档模板" type="text" class="layui-input" /><a onclick="select(2)" class="layui-btn" type="button"><i class="layui-icon">&#xe615;</i></a>
+								<input id="info" name="infoTemplate" placeholder="请输入文档模板" type="text" class="layui-input"maxLength="25" /><a onclick="select(2)" class="layui-btn" type="button"><i class="layui-icon">&#xe615;</i></a>
 							</div>
 						</div>
 					</div>
